--- a/index.html
+++ b/index.html
@@ -5,27 +5,32 @@
 disabled/>
 <div class="keys">
 
+<button type="button" class="all-clear" value="all-clear">AC</button>    
     <button type="button" class="user" value="+">+
 </button>
     <button type="button" class="user" value="-">-
 </button>
     <button type="button" class="user" value="*">&times;
 </button>
-    <button type="button" class="user" value="/">&divide;
-</button>
+  
 
 <button type="button" value="7">7</button>
 <button type="button" value="8">8</button>
 <button type="button" value="9">9</button>
+<button type="button" class="user" value="/">&divide;
+</button>
 <button type="button" value="4">4</button>
 <button type="button" value="5">5</button>
 <button type="button" value="6">6</button>
+<button type="button" class="user" value="-">-
+</button>
 <button type="button" value="1">1</button>
 <button type="button" value="2">2</button>
 <button type="button" value="3">3</button>
+<button type="button" class="user" value="+">+
+</button>
 <button type="button" value="0">0</button>
 <button type="button" class="decimal" value=".">.</button>
-<button type="button" class="all-clear" value="all-clear">AC</button>
 <button type="button" class="equal-sign user" value="=">=</button>
 <script src="main.js" defer></script>
 </div>
